gccida/c1/expand_float
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/optabs.c:4550:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/optabs.c:4552:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode i; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/optabs.c:4556:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code v9; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/optabs.c:4563:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/optabs.c:4566:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/optabs.c:4570:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/optabs.c:4599:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode fixmode; // [rsp+30h] [rbp-78h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/optabs.c:4649:31: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
emit_unop_insn( v7, x, v12, ( rtx_code)( 2 * ( v10 != 0) + 125)); 
                              ^~~~~~~~
                              rtx_cost
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/optabs.c:4649:63: error: too few arguments to function call, expected 2, have 1
emit_unop_insn( v7, x, v12, ( rtx_code)( 2 * ( v10 != 0) + 125)); 
                            ~~~~~~~~~~~                       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/rtl.h:1787:1: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/optabs.c:4681:53: error: use of undeclared identifier 'machine_mode'
if ( v18 < mode_bitsize[v19] && can_float_p( v19, ( machine_mode)v17, 0) != CODE_FOR_nothing ) 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/optabs.c:4740:61: error: use of undeclared identifier 'machine_mode'
emit_cmp_and_jump_insns( v15, const_int_rtx[64], GE, 0LL, ( machine_mode)*( ( unsigned __int8 *)v15 + 2), 0, fixmodea); 
                                                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/optabs.c:4744:1: error: too many arguments to function call, expected 2, have 8
v34, 
^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/real.h:160:1: note: 'ereal_ldexp' declared here
extern REAL_VALUE_TYPE ereal_ldexp PARAMS ((REAL_VALUE_TYPE, int));
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/optabs.c:4751:27: error: passing 'enum machine_mode' to parameter of incompatible type 'realvaluetype'
v39 = immed_real_const_1( v19, v55); 
                          ^~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/real.h:466:67: note: passing argument to parameter here
extern struct rtx_def *immed_real_const_1       PARAMS ((REAL_VALUE_TYPE,
                                                                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/optabs.c:4769:8: error: use of undeclared identifier 'off_6C2B50'
v33 = &off_6C2B50 + ( char)v32; 
       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/optabs.c:4775:8: error: use of undeclared identifier 'off_6C2B68'
v33 = &off_6C2B68 + ( char)v44; 
       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/optabs.c:4781:8: error: use of undeclared identifier 'off_6C2B80'
v33 = &off_6C2B80 + ( char)v42; 
       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/optabs.c:4787:8: error: use of undeclared identifier 'off_6C2B98'
v33 = &off_6C2B98 + ( char)v43; 
       ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/optabs.c:4799:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)v29 + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/optabs.c:4805:31: error: use of undeclared identifier 'machine_mode'
v48 = gen_rtx_fmt_e( FLOAT, ( machine_mode)*( ( unsigned __int8 *)v29 + 2), v31); 
                              ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_float/src/obj/optabs.o] Error 1
